CALENDAR: fix missing background for calendar selection screen

--- a/gmail-dark.less.user.css
+++ b/gmail-dark.less.user.css
@@ -1394,7 +1394,7 @@
     /*//----------//*/
     /*//main view//*/
     /*background color*/
-    .v83gc, .GENA3c, .w61Ns, .Gk2izd, .cBs4Te, .IKYMIb {
+    .v83gc, .GENA3c, .w61Ns, .Gk2izd, .cBs4Te, .IKYMIb, .erzbAb {
         background-color: #111;
     }
     /*white text*/
